# HelloJni

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  my_log.h  native-lib.cpp
app/src/main/java/com/example/hellojni/: MainActivity.kt
echo/: build.gradle
echo/src/androidTest/java/com/jokyxray/echo/: ExampleInstrumentedTest.kt
echo/src/main/: AndroidManifest.xml
echo/src/main/cpp/: CMakeLists.txt  Echo.cpp
echo/src/main/java/com/jokyxray/echo/: AbstractEchoActivity.kt  EchoServerActivity.kt  MainActivity.kt
echo/src/main/res/layout/: activity_echo_server.xml
echo/src/test/java/com/jokyxray/echo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
threads/: CMakeLists.txt  build.gradle
threads/src/main/cpp/: threads.cpp
threads/src/main/java/com/example/threads/: MainActivity.kt
threads/src/main/res/layout/: activity_main.xml
threads/src/main/res/values/: strings.xml
